--- a/eCommerce/src/app/app.component.html
+++ b/eCommerce/src/app/app.component.html
@@ -1,3 +1,10 @@
 <app-top-bar></app-top-bar>
 <app-header></app-header>
+<app-featured></app-featured>
+<app-categories></app-categories>
+<app-offer></app-offer>
+<app-products></app-products>
+<app-subscribe></app-subscribe>
+<!-- <app-vendor></app-vendor> -->
+<app-footer></app-footer>
 <router-outlet></router-outlet>
