product service + routing

--- a/ClientSide/src/app/app.component.html
+++ b/ClientSide/src/app/app.component.html
@@ -1,6 +1,5 @@
 <div class="custom-scrollbar-container">
-  <!-- Your content goes here -->
-  <app-top-bar></app-top-bar>
+<app-top-bar></app-top-bar>
 <app-header></app-header>
 <!-- <app-product-details></app-product-details> -->
 <!-- <app-shopping-cart></app-shopping-cart> -->
@@ -8,13 +7,15 @@
 <!-- <app-log-in></app-log-in> -->
 <!-- <app-sign-up></app-sign-up> -->
 <!-- <app-shop></app-shop> -->
-<app-featured></app-featured>
-<app-categories></app-categories>
-<app-offer></app-offer>
-<app-products></app-products>
-<app-subscribe></app-subscribe>
-<app-vendor></app-vendor>
+
+<!-- <app-featured></app-featured> -->
+<!-- <app-categories></app-categories> -->
+<!-- <app-offer></app-offer> -->
+<!-- <app-products></app-products> -->
+<!-- <app-subscribe></app-subscribe> -->
+<!-- <app-vendor></app-vendor> -->
+<router-outlet></router-outlet>
 <app-footer></app-footer>
 </div>
 
-<router-outlet></router-outlet>
+
