--- a/ClientSide/src/app/components/log-in/log-in.component.html
+++ b/ClientSide/src/app/components/log-in/log-in.component.html
@@ -40,7 +40,7 @@
                         <button class="btn btn-lg w-100 fs-6" id="btn-Login">Login</button>
                     </div>
                     <div class="row">
-                        <small>Don't have an account <a href="#">Sign up</a></small>
+                        <small>Don't have an account <a routerLink="../signup">Sign up</a></small>
                     </div>
                     <div class="container text-center text-bg-danger py-3" id="alert" style="visibility: hidden;">
                         user not found
