--- a/ClientSide/src/app/components/products/products.component.html
+++ b/ClientSide/src/app/components/products/products.component.html
@@ -1,4 +1,13 @@
-    <!-- Products Start -->
+<div *ngFor="let product of products">
+{{ product.name}}
+</div>
+<div *ngFor="let product of products">
+  {{ product.price}}
+</div>
+<div class="text-danger">
+  {{errMsg}}
+</div>
+<!-- Products Start -->
     <div class="container-fluid pt-5">
       <div class="text-center mb-4">
           <h2 class="section-title px-5"><span class="px-2">Trandy Products</span></h2>
