--- a/ClientSide/src/app/components/log-in/log-in.component.html
+++ b/ClientSide/src/app/components/log-in/log-in.component.html
@@ -1,53 +1,56 @@
 <section class="container text-center mx-auto">
 <div class="container mx-auto d-flex min-vh-100 py-5">
-    <div class="row  rounded-5 p-5 bg-white shadow box-area justify-content-center algin-item-center">
-        <!-- Left Section  -->
-        <div class="left-box mb-5 col-lg-5 rounded-4 d-flex justify-content-center algin-item-center flex-column"
-            style="background: #28576f;">
-            <div class="featured-image">
-                <img class="img-fluid py-3" src="../../assets/images/login.svg" alt="background" />
-            </div>
-            <p class="fs-2">Be touched</p>
-            <p class="">Join to learn on Edu Zone</p>
-        </div>
-        <!-- Right Section -->
-        <div class="container col-lg-6 right-box d-flex justify-content-center flex-column">
-            <div class="row algin-item-center">
-                <div class="header-text mb-4">
-                    <h1>Hello, Again 🥰</h1>
-                    <h5>We are happy to have you back.</h5>
-                    <div class="input-group mb-3 form-field">
-                        <input type="email" id="email-input"
-                            class="form-control form-control-lg bg-light fs-6 form-text"
-                            placeholder="Email address" />
-                    </div>
-                    <div class="input-group mb-1 form-field">
-                        <input type="password" id="password-input"
-                            class="form-control form-control-lg bg-light fs-6 form-text"
-                            placeholder="Password" />
-                    </div>
-                    <div class="input-group mb-5 d-flex justify-content-between">
-                        <div class="form-check">
-                            <input type="checkbox" id="formCheck"
-                                class="form-check-input" />
-                            <label for="formCheck" class="form-check-label text-secondary">Remember me</label>
-                        </div>
-                        <div class="forget">
-                            <small><a href="#"> Forget Password?</a></small>
-                        </div>
-                    </div>
-                    <div class="input-group mb-3">
-                        <button class="btn btn-lg w-100 fs-6" id="btn-Login">Login</button>
-                    </div>
-                    <div class="row">
-                        <small>Don't have an account <a routerLink="../signup">Sign up</a></small>
-                    </div>
-                    <div class="container text-center text-bg-danger py-3" id="alert" style="visibility: hidden;">
-                        user not found
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+<div class="row  rounded-5 p-5 bg-white shadow box-area justify-content-center algin-item-center">
+  <div class="container col-lg-6 right-box d-flex justify-content-center flex-column">
+      <div class="row algin-item-center">
+          <div class="header-text mb-4">
+              <h1>Hello, Again 🥰</h1>
+              <h5>We are happy to have you back.</h5>
+              <form [formGroup]="loginForm">
+                {{ loginForm.value | json}}
+              <div class="input-group mb-3 form-field">
+                  <input [class.is-invalid] = "email?.invalid && email?.touched"
+                      type="email" id="email-input" formControlName="email"
+                      class="form-control form-control-lg bg-light fs-6 form-text"
+                      placeholder="Email address" />
+              </div>
+              <div *ngIf="email?.invalid && email?.touched">
+                <small class="text-danger" *ngIf="email?.errors?.['required']"> Email is required</small>
+                <small class="text-danger" *ngIf="email?.errors?.['pattern']"> Email doesn't match pattern</small>
+              </div>
+              <div class="input-group mb-1 form-field">
+                  <input [class.is-invalid] = "password?.invalid && password?.touched"
+                      type="password" id="password-input" formControlName="password"
+                      class="form-control form-control-lg bg-light fs-6 form-text"
+                      placeholder="Password"/>
+              </div>
+              <div *ngIf="password?.invalid && password?.touched">
+                <small class="text-danger" *ngIf="password?.errors?.['required']"> Password is required</small>
+                <small class="text-danger" *ngIf="password?.errors?.['minLength']"> Password must be 8 char at least</small>
+              </div>
+              <div class="input-group mb-5 d-flex justify-content-between">
+                  <div class="form-check">
+                      <input type="checkbox" id="formCheck"
+                          class="form-check-input" />
+                      <label for="formCheck" class="form-check-label text-secondary">Remember me</label>
+                  </div>
+                  <div class="forget">
+                      <small><a href="#"> Forget Password?</a></small>
+                  </div>
+              </div>
+              <div class="input-group mb-3">
+                  <button class="btn btn-lg w-100 fs-6" id="btn-Login">Login</button>
+              </div>
+            </form>
+              <div class="row">
+                  <small>Don't have an account <a routerLink="../signup">Sign up</a></small>
+              </div>
+              <div class="container text-center text-bg-danger py-3" id="alert" style="visibility: hidden;">
+                  user not found
+              </div>
+          </div>
+      </div>
+  </div>
+</div>
 </div>
 </section>
