--- a/ClientSide/src/app/app.component.html
+++ b/ClientSide/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div class="custom-scrollbar-container">
 <app-top-bar></app-top-bar>
-<app-header></app-header>
+<app-nav></app-nav>
+<!-- <app-header></app-header> -->
 <!-- <app-product-details></app-product-details> -->
 <!-- <app-shopping-cart></app-shopping-cart> -->
 <!-- <app-contact-us></app-contact-us> -->
