--- a/ClientSide/src/app/components/footer/footer.component.html
+++ b/ClientSide/src/app/components/footer/footer.component.html
@@ -15,23 +15,23 @@
                   <div class="col-md-4 mb-5">
                       <h5 class="font-weight-bold text-dark mb-4">Quick Links</h5>
                       <div class="d-flex flex-column justify-content-start">
-                          <a class="text-dark mb-2" href="index.html"><i class="fa fa-angle-right mr-2"></i>Home</a>
-                          <a class="text-dark mb-2" href="shop.html"><i class="fa fa-angle-right mr-2"></i>Our Shop</a>
-                          <a class="text-dark mb-2" href="detail.html"><i class="fa fa-angle-right mr-2"></i>Shop Detail</a>
-                          <a class="text-dark mb-2" href="cart.html"><i class="fa fa-angle-right mr-2"></i>Shopping Cart</a>
-                          <a class="text-dark mb-2" href="checkout.html"><i class="fa fa-angle-right mr-2"></i>Checkout</a>
-                          <a class="text-dark" href="contact.html"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
+                        <a class="text-dark mb-2" routerLink="home"><i class="fa fa-angle-right mr-2"></i>Home</a>
+                        <a class="text-dark mb-2" routerLink="shop"><i class="fa fa-angle-right mr-2"></i>Our Shop</a>
+                        <a class="text-dark mb-2" routerLink="categories"><i class="fa fa-angle-right mr-2"></i>Categories</a>
+                        <a class="text-dark mb-2" routerLink="cart"><i class="fa fa-angle-right mr-2"></i>Shopping Cart</a>
+                        <a class="text-dark mb-2" routerLink="checkout"><i class="fa fa-angle-right mr-2"></i>Checkout</a>
+                        <a class="text-dark" routerLink="contact"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
                       </div>
                   </div>
                   <div class="col-md-4 mb-5">
                       <h5 class="font-weight-bold text-dark mb-4">Quick Links</h5>
                       <div class="d-flex flex-column justify-content-start">
-                          <a class="text-dark mb-2" href="index.html"><i class="fa fa-angle-right mr-2"></i>Home</a>
-                          <a class="text-dark mb-2" href="shop.html"><i class="fa fa-angle-right mr-2"></i>Our Shop</a>
-                          <a class="text-dark mb-2" href="detail.html"><i class="fa fa-angle-right mr-2"></i>Shop Detail</a>
-                          <a class="text-dark mb-2" href="cart.html"><i class="fa fa-angle-right mr-2"></i>Shopping Cart</a>
-                          <a class="text-dark mb-2" href="checkout.html"><i class="fa fa-angle-right mr-2"></i>Checkout</a>
-                          <a class="text-dark" href="contact.html"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
+                          <a class="text-dark mb-2" routerLink="home"><i class="fa fa-angle-right mr-2"></i>Home</a>
+                          <a class="text-dark mb-2" routerLink="shop"><i class="fa fa-angle-right mr-2"></i>Our Shop</a>
+                          <a class="text-dark mb-2" routerLink="categories"><i class="fa fa-angle-right mr-2"></i>Categories</a>
+                          <a class="text-dark mb-2" routerLink="cart"><i class="fa fa-angle-right mr-2"></i>Shopping Cart</a>
+                          <a class="text-dark mb-2" routerLink="checkout"><i class="fa fa-angle-right mr-2"></i>Checkout</a>
+                          <a class="text-dark" routerLink="contact"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
                       </div>
                   </div>
                   <div class="col-md-4 mb-5">
@@ -55,9 +55,9 @@
       <div class="row border-top border-light mx-xl-5 py-4">
           <div class="col-md-6 px-xl-0">
               <p class="mb-md-0 text-center text-md-left text-dark">
-                  &copy; <a class="text-dark font-weight-semi-bold" href="#">EShopper</a>. All Rights Reserved. Coded
+                  &copy; <a class="text-dark font-weight-semi-bold" routerLink="home">EShopper</a>. All Rights Reserved. Coded
                   by
-                  <a class="text-dark font-weight-semi-bold" href="#">Lamiaa Selim</a>
+                  <a class="text-dark font-weight-semi-bold" href="https://github.com/lamiaaselim">Lamiaa Selim</a>
               </p>
           </div>
           <div class="col-md-6 px-xl-0 text-center text-md-right">
