--- a/ClientSide/src/app/components/products/products.component.html
+++ b/ClientSide/src/app/components/products/products.component.html
@@ -8,7 +8,7 @@
   {{errMsg}}
 </div>
 <!-- Products Start -->
-    <div class="container-fluid pt-5">
+    <div class="container pt-5">
       <div class="text-center mb-4">
           <h2 class="section-title px-5"><span class="px-2">Trandy Products</span></h2>
       </div>
