--- a/ClientSide/src/app/components/nav/nav.component.html
+++ b/ClientSide/src/app/components/nav/nav.component.html
@@ -8,15 +8,15 @@
   </button>
   <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
       <div class="navbar-nav mr-auto py-0">
-          <a routerLink="home" class="nav-item nav-link active">Home</a>
-          <a routerLink="categories" class="nav-item nav-link">Categories</a>
-          <a routerLink="shop" class="nav-item nav-link">Shopping</a>
-          <a routerLink="cart" class="nav-item nav-link">Cart</a>
-          <a routerLink="contact" class="nav-item nav-link">Contact</a>
+          <a routerLink="home" class="nav-item nav-link" routerLinkActive="active" [routerLinkActiveOptions]='{exact: true}'>Home</a>
+          <a routerLink="categories" class="nav-item nav-link" routerLinkActive="active">Categories</a>
+          <a routerLink="shop" class="nav-item nav-link" routerLinkActive="active">Shopping</a>
+          <a routerLink="cart" class="nav-item nav-link" routerLinkActive="active">Cart</a>
+          <a routerLink="contact" class="nav-item nav-link" routerLinkActive="active">Contact</a>
       </div>
       <div class="navbar-nav ml-auto py-0">
-          <a routerLink="login" class="nav-item nav-link">Login</a>
-          <a routerLink="signup" class="nav-item nav-link">Register</a>
+          <a routerLink="login" class="nav-item nav-link" routerLinkActive="active">Login</a>
+          <a routerLink="signup" class="nav-item nav-link" routerLinkActive="active">Register</a>
       </div>
   </div>
 </nav>
