--- a/ClientSide/src/app/components/product-details/product-details.component.html
+++ b/ClientSide/src/app/components/product-details/product-details.component.html
@@ -1,33 +1,20 @@
     <!-- Shop Detail Start -->
     <div class="container-fluid py-5">
-      <div class="row px-xl-5">
+      <div class="row px-xl-5" *ngIf="productOfId">
+        <!-- //image of product -->
           <div class="col-lg-5 pb-5">
               <div id="product-carousel" class="carousel slide" data-ride="carousel">
                   <div class="carousel-inner border">
                       <div class="carousel-item active">
                           <img class="w-100 h-100" src="../../assets/images/product-1.jpg" alt="Image">
                       </div>
-                      <div class="carousel-item">
-                          <img class="w-100 h-100" src="../../assets/images/product-2.jpg" alt="Image">
-                      </div>
-                      <div class="carousel-item">
-                          <img class="w-100 h-100" src="../../assets/images/product-3.jpg" alt="Image">
-                      </div>
-                      <div class="carousel-item">
-                          <img class="w-100 h-100" src="../../assets/images/product-4.jpg" alt="Image">
-                      </div>
                   </div>
-                  <a class="carousel-control-prev" href="#product-carousel" data-slide="prev">
-                      <i class="fa fa-2x fa-angle-left text-dark"></i>
-                  </a>
-                  <a class="carousel-control-next" href="#product-carousel" data-slide="next">
-                      <i class="fa fa-2x fa-angle-right text-dark"></i>
-                  </a>
               </div>
           </div>
-
+        <!-- //details of product -->
           <div class="col-lg-7 pb-5">
-              <h3 class="font-weight-semi-bold">Colorful Stylish Shirt</h3>
+              <h3 class="font-weight-semi-bold">{{productOfId.name}}</h3>
+        <!-- //rating of product -->
               <div class="d-flex mb-3">
                   <div class="text-primary mr-2">
                       <small class="fas fa-star"></small>
@@ -38,58 +25,29 @@
                   </div>
                   <small class="pt-1">(50 Reviews)</small>
               </div>
-              <h3 class="font-weight-semi-bold mb-4">$150.00</h3>
-              <p class="mb-4">Volup erat ipsum diam elitr rebum et dolor. Est nonumy elitr erat diam stet sit clita ea. Sanc invidunt ipsum et, labore clita lorem magna lorem ut. Erat lorem duo dolor no sea nonumy. Accus labore stet, est lorem sit diam sea et justo, amet at lorem et eirmod ipsum diam et rebum kasd rebum.</p>
+              <h3 class="font-weight-semi-bold mb-4">{{productOfId.price}}</h3>
+              <p class="mb-4">{{productOfId.description}}</p>
+              <!-- //sizes of product -->
               <div class="d-flex mb-3">
                   <p class="text-dark font-weight-medium mb-0 mr-3">Sizes:</p>
                   <form>
-                      <div class="custom-control custom-radio custom-control-inline">
+                      <div *ngFor="let sizeId of productOfId.sizes" class="custom-control custom-radio custom-control-inline">
                           <input type="radio" class="custom-control-input" id="size-1" name="size">
-                          <label class="custom-control-label" for="size-1">XS</label>
-                      </div>
-                      <div class="custom-control custom-radio custom-control-inline">
-                          <input type="radio" class="custom-control-input" id="size-2" name="size">
-                          <label class="custom-control-label" for="size-2">S</label>
-                      </div>
-                      <div class="custom-control custom-radio custom-control-inline">
-                          <input type="radio" class="custom-control-input" id="size-3" name="size">
-                          <label class="custom-control-label" for="size-3">M</label>
-                      </div>
-                      <div class="custom-control custom-radio custom-control-inline">
-                          <input type="radio" class="custom-control-input" id="size-4" name="size">
-                          <label class="custom-control-label" for="size-4">L</label>
-                      </div>
-                      <div class="custom-control custom-radio custom-control-inline">
-                          <input type="radio" class="custom-control-input" id="size-5" name="size">
-                          <label class="custom-control-label" for="size-5">XL</label>
+                          <label class="custom-control-label" for="size-1">{{ productOfId.sizes.name }}</label>
                       </div>
                   </form>
               </div>
+              <!-- //colors of product -->
               <div class="d-flex mb-4">
                   <p class="text-dark font-weight-medium mb-0 mr-3">Colors:</p>
                   <form>
-                      <div class="custom-control custom-radio custom-control-inline">
+                      <div *ngFor="let colorId of productOfId.colors" class="custom-control custom-radio custom-control-inline">
                           <input type="radio" class="custom-control-input" id="color-1" name="color">
-                          <label class="custom-control-label" for="color-1">Black</label>
-                      </div>
-                      <div class="custom-control custom-radio custom-control-inline">
-                          <input type="radio" class="custom-control-input" id="color-2" name="color">
-                          <label class="custom-control-label" for="color-2">White</label>
-                      </div>
-                      <div class="custom-control custom-radio custom-control-inline">
-                          <input type="radio" class="custom-control-input" id="color-3" name="color">
-                          <label class="custom-control-label" for="color-3">Red</label>
-                      </div>
-                      <div class="custom-control custom-radio custom-control-inline">
-                          <input type="radio" class="custom-control-input" id="color-4" name="color">
-                          <label class="custom-control-label" for="color-4">Blue</label>
-                      </div>
-                      <div class="custom-control custom-radio custom-control-inline">
-                          <input type="radio" class="custom-control-input" id="color-5" name="color">
-                          <label class="custom-control-label" for="color-5">Green</label>
+                          <label class="custom-control-label" for="color-1">{{ productOfId.colors.name }}</label>
                       </div>
                   </form>
               </div>
+              <!-- choice quantity -->
               <div class="d-flex align-items-center mb-4 pt-2">
                   <div class="input-group quantity mr-3" style="width: 130px;">
                       <div class="input-group-btn">
@@ -105,23 +63,6 @@
                       </div>
                   </div>
                   <button class="btn btn-primary px-3"><i class="fa fa-shopping-cart mr-1"></i> Add To Cart</button>
-              </div>
-              <div class="d-flex pt-2">
-                  <p class="text-dark font-weight-medium mb-0 mr-2">Share on:</p>
-                  <div class="d-inline-flex">
-                      <a class="text-dark px-2" href="">
-                          <i class="fab fa-facebook-f"></i>
-                      </a>
-                      <a class="text-dark px-2" href="">
-                          <i class="fab fa-twitter"></i>
-                      </a>
-                      <a class="text-dark px-2" href="">
-                          <i class="fab fa-linkedin-in"></i>
-                      </a>
-                      <a class="text-dark px-2" href="">
-                          <i class="fab fa-pinterest"></i>
-                      </a>
-                  </div>
               </div>
           </div>
       </div>
