--- a/ClientSide/src/app/components/product-details/product-details.component.html
+++ b/ClientSide/src/app/components/product-details/product-details.component.html
@@ -48,7 +48,7 @@
                   </form>
               </div>
               <!-- choice quantity -->
-              <div class="d-flex align-items-center mb-4 pt-2">
+              <div class="d-flex justify-content-evenly align-items-center mb-4 pt-2">
                   <div class="input-group quantity mr-3" style="width: 130px;">
                       <div class="input-group-btn">
                           <button class="btn btn-primary btn-minus" >
@@ -62,7 +62,7 @@
                           </button>
                       </div>
                   </div>
-                  <button class="btn btn-primary px-3"><i class="fa fa-shopping-cart mr-1"></i> Add To Cart</button>
+                  <a class="btn btn-primary px-3"><i class="fa fa-shopping-cart mr-1"></i> Add To Cart</a>
               </div>
           </div>
       </div>
