category collection DB

--- a/ClientSide/src/app/components/home/home.component.html
+++ b/ClientSide/src/app/components/home/home.component.html
@@ -1,8 +1,8 @@
 <div>
 <app-header></app-header>
 <app-featured></app-featured>
+<app-categories></app-categories>
 <app-offer></app-offer>
-<app-products></app-products>
 <app-subscribe></app-subscribe>
 <app-vendor></app-vendor>
 </div>
