--- a/ClientSide/src/app/components/categories/categories.component.html
+++ b/ClientSide/src/app/components/categories/categories.component.html
@@ -4,7 +4,7 @@
     <div class="col-lg-4 col-md-6 pb-1 h-100" *ngFor="let category of categories">
       <div class="cat-item d-flex flex-column border mb-4" style="padding: 30px;">
         <p class="text-right">15 Products</p>
-        <a href="" class="cat-img position-relative overflow-hidden mb-3">
+        <a (click)="selectCategory(category)" class="cat-img position-relative overflow-hidden mb-3">
           <img class="img-fluid" [src]="'../../assets/images/category/' + category.image + '.jpg'" alt="">
         </a>
         <h5 role="button" class="font-weight-semi-bold m-0">{{category.categoryName}} dresses</h5>
