--- a/ClientSide/src/app/components/not-found/not-found.component.html
+++ b/ClientSide/src/app/components/not-found/not-found.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="card">
     <div class="card-img">
-      <img src="../../../assets/images/404-error-dribbble.gif" alt="not-found-page">
+      <img class="img-fluid" src="../../../assets/images/404-error-dribbble.gif" alt="not-found-page">
     </div>
   </div>
 </div>
