--- a/ClientSide/src/app/components/log-in/log-in.component.html
+++ b/ClientSide/src/app/components/log-in/log-in.component.html
@@ -26,7 +26,7 @@
               </div>
               <div *ngIf="password?.invalid && password?.touched">
                 <small class="text-danger" *ngIf="password?.errors?.['required']"> Password is required</small>
-                <small class="text-danger" *ngIf="password?.errors?.['minLength']"> Password must be 8 char at least</small>
+                <small class="text-danger" *ngIf="password?.errors?.['minlength']"> Password must be 8 char at least</small>
               </div>
               <div class="input-group mb-5 d-flex justify-content-between">
                   <div class="form-check">
