--- a/ClientSide/src/app/components/nav/nav.component.html
+++ b/ClientSide/src/app/components/nav/nav.component.html
@@ -3,10 +3,10 @@
   <a href="" class="text-decoration-none d-block d-lg-none">
       <h1 class="m-0 display-5 font-weight-semi-bold"><span class="text-primary font-weight-bold border px-3 mr-1">E</span>Shopper</h1>
   </a>
-  <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
+  <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
       <div class="navbar-nav mr-auto py-0">
           <a routerLink="home" class="nav-item nav-link" routerLinkActive="active" [routerLinkActiveOptions]='{exact: true}'>Home</a>
           <a routerLink="categories" class="nav-item nav-link" routerLinkActive="active">Categories</a>
