--- a/ClientSide/src/app/components/sign-up/sign-up.component.html
+++ b/ClientSide/src/app/components/sign-up/sign-up.component.html
@@ -49,7 +49,7 @@
                 </div>
                 <div *ngIf="password?.invalid && password?.touched">
                   <small class="text-danger" *ngIf="password?.errors?.['required']"> Password is required</small>
-                  <small class="text-danger" *ngIf="password?.errors?.['minLength']"> Password must be 8 char at least</small>
+                  <small class="text-danger" *ngIf="password?.errors?.['minlength']"> Password must be 8 char at least</small>
                 </div>
 
               <div class="input-group mb-1 form-field">
@@ -60,7 +60,7 @@
               </div>
               <div *ngIf="confirmPassword?.invalid && confirmPassword?.touched">
                 <small class="text-danger" *ngIf="confirmPassword?.errors?.['required']"> Confirm Password is required</small>
-                <small class="text-danger">{{ machedPassword() }}</small>
+                <small class="text-danger" *ngIf="confirmPassword?.errors?.['passwordMismatch']">Passwords do not match</small>                <small class="text-danger">{{ machedPassword() }}</small>
               </div>
 
                 <div class="input-group mb-5 d-flex justify-content-between">
