--- a/ClientSide/src/app/components/nav/nav.component.html
+++ b/ClientSide/src/app/components/nav/nav.component.html
@@ -1,10 +1,10 @@
 <div class="container">
 <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-0">
-  <a href="" class="text-decoration-none d-block d-lg-none">
+  <a routerLink="home" class="text-decoration-none d-block d-lg-none">
       <h1 class="m-0 display-5 font-weight-semi-bold"><span class="text-primary font-weight-bold border px-3 mr-1">E</span>Shopper</h1>
   </a>
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+    <span><i class="fa-solid fa-bars-staggered fa-lg"></i></span>
   </button>
   <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
       <div class="navbar-nav mr-auto py-0">
