--- a/ClientSide/src/app/components/offer/offer.component.html
+++ b/ClientSide/src/app/components/offer/offer.component.html
@@ -3,7 +3,7 @@
   <div class="row px-xl-5">
       <div class="col-md-6 pb-4">
           <div class="position-relative bg-secondary text-center text-md-right text-white mb-2 py-5 px-5">
-              <img src="img/offer-1.png" alt="">
+              <img src="../../../assets/images/offer-1.png" alt="">
               <div class="position-relative" style="z-index: 1;">
                   <h5 class="text-uppercase text-primary mb-3">20% off the all order</h5>
                   <h1 class="mb-4 font-weight-semi-bold">Spring Collection</h1>
@@ -13,7 +13,7 @@
       </div>
       <div class="col-md-6 pb-4">
           <div class="position-relative bg-secondary text-center text-md-left text-white mb-2 py-5 px-5">
-              <img src="img/offer-2.png" alt="">
+              <img src="../../../assets/images/offer-2.png" alt="">
               <div class="position-relative" style="z-index: 1;">
                   <h5 class="text-uppercase text-primary mb-3">20% off the all order</h5>
                   <h1 class="mb-4 font-weight-semi-bold">Winter Collection</h1>
