--- a/ClientSide/src/app/components/shop/shop.component.html
+++ b/ClientSide/src/app/components/shop/shop.component.html
@@ -129,18 +129,17 @@
                           <div class="input-group">
                               <input type="text" class="form-control" placeholder="Search by name">
                               <div class="input-group-append">
-                                  <span class="input-group-text bg-transparent text-primary">
+                                  <span role="button" class="input-group-text bg-transparent text-primary py-3">
                                       <i class="fa fa-search"></i>
                                   </span>
                               </div>
                           </div>
                       </form>
                       <div class="dropdown ml-4">
-                          <button class="btn border dropdown-toggle" type="button" id="triggerId" data-toggle="dropdown" aria-haspopup="true"
-                                  aria-expanded="false">
-                                      Sort by
-                                  </button>
-                          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="triggerId">
+                          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Sort by
+                          </button>
+                          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                               <a class="dropdown-item" href="#">Latest</a>
                               <a class="dropdown-item" href="#">Popularity</a>
                               <a class="dropdown-item" href="#">Best Rating</a>
