--- a/ClientSide/src/app/components/product-details/product-details.component.html
+++ b/ClientSide/src/app/components/product-details/product-details.component.html
@@ -6,7 +6,7 @@
       <div id="product-carousel" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner border">
           <div class="carousel-item active">
-            <img class="w-100 h-100" src="../../assets/images/product-1.jpg" alt="Image">
+            <img class="w-100 h-100" [src]="'../../assets/images/product/' + productOfId.image + '.jpg'" alt={{productOfId.name}}>
           </div>
         </div>
       </div>
