--- a/ClientSide/src/app/components/shopping-cart/shopping-cart.component.html
+++ b/ClientSide/src/app/components/shopping-cart/shopping-cart.component.html
@@ -1,11 +1,13 @@
   <!-- Cart Start -->
   <div class="container-fluid pt-5">
     <div class="row px-xl-5">
-        <div class="col-lg-8 table-responsive mb-5">
+        <div class="col-lg-9 table-responsive mb-5">
             <table class="table table-bordered text-center mb-0">
                 <thead class="bg-secondary text-dark">
                     <tr>
                         <th>Products</th>
+                        <th>Color</th>
+                        <th>Size</th>
                         <th>Price</th>
                         <th>Quantity</th>
                         <th>Total</th>
@@ -14,7 +16,32 @@
                 </thead>
                 <tbody class="align-middle">
                     <tr>
-                        <td class="align-middle"><img src="img/product-1.jpg" alt="" style="width: 50px;"> Colorful Stylish Shirt</td>
+                        <td class="align-middle"><img src="../../../assets/images/product-1.jpg" alt="" style="width: 50px;"> Colorful Stylish Shirt</td>
+                        <td class="align-middle">Red</td>
+                        <td class="align-middle">XL</td>
+                        <td class="align-middle">$150</td>
+                        <td class="align-middle">
+                            <div class="input-group quantity mx-auto" style="width: 100px;">
+                                <div class="input-group-btn">
+                                    <button class="btn btn-sm btn-primary btn-minus" [disabled]="isDisabled" (click)="decreaseQuantity()">
+                                    <i class="fa fa-minus"></i>
+                                    </button>
+                                </div>
+                                <input type="text" class="form-control form-control-sm bg-secondary text-center"[(ngModel)]="counterQuantity">
+                                <div class="input-group-btn">
+                                    <button class="btn btn-sm btn-primary btn-plus" (click)="increaseQuantity()">
+                                        <i class="fa fa-plus"></i>
+                                    </button>
+                                </div>
+                            </div>
+                        </td>
+                        <td class="align-middle">$150</td>
+                        <td class="align-middle"><button class="btn btn-sm btn-primary"><i class="fa fa-times"></i></button></td>
+                    </tr>
+                    <tr>
+                        <td class="align-middle"><img src="../../../assets/images/product-2.jpg" alt="" style="width: 50px;"> Colorful Stylish Shirt</td>
+                        <td class="align-middle">Red</td>
+                        <td class="align-middle">XL</td>
                         <td class="align-middle">$150</td>
                         <td class="align-middle">
                             <div class="input-group quantity mx-auto" style="width: 100px;">
@@ -35,7 +62,9 @@
                         <td class="align-middle"><button class="btn btn-sm btn-primary"><i class="fa fa-times"></i></button></td>
                     </tr>
                     <tr>
-                        <td class="align-middle"><img src="img/product-2.jpg" alt="" style="width: 50px;"> Colorful Stylish Shirt</td>
+                        <td class="align-middle"><img src="../../../assets/images/product-3.jpg" alt="" style="width: 50px;"> Colorful Stylish Shirt</td>
+                        <td class="align-middle">Red</td>
+                        <td class="align-middle">XL</td>
                         <td class="align-middle">$150</td>
                         <td class="align-middle">
                             <div class="input-group quantity mx-auto" style="width: 100px;">
@@ -56,7 +85,9 @@
                         <td class="align-middle"><button class="btn btn-sm btn-primary"><i class="fa fa-times"></i></button></td>
                     </tr>
                     <tr>
-                        <td class="align-middle"><img src="img/product-3.jpg" alt="" style="width: 50px;"> Colorful Stylish Shirt</td>
+                        <td class="align-middle"><img src="../../../assets/images/product-4.jpg" alt="" style="width: 50px;"> Colorful Stylish Shirt</td>
+                        <td class="align-middle">Red</td>
+                        <td class="align-middle">XL</td>
                         <td class="align-middle">$150</td>
                         <td class="align-middle">
                             <div class="input-group quantity mx-auto" style="width: 100px;">
@@ -77,28 +108,9 @@
                         <td class="align-middle"><button class="btn btn-sm btn-primary"><i class="fa fa-times"></i></button></td>
                     </tr>
                     <tr>
-                        <td class="align-middle"><img src="img/product-4.jpg" alt="" style="width: 50px;"> Colorful Stylish Shirt</td>
-                        <td class="align-middle">$150</td>
-                        <td class="align-middle">
-                            <div class="input-group quantity mx-auto" style="width: 100px;">
-                                <div class="input-group-btn">
-                                    <button class="btn btn-sm btn-primary btn-minus" >
-                                    <i class="fa fa-minus"></i>
-                                    </button>
-                                </div>
-                                <input type="text" class="form-control form-control-sm bg-secondary text-center" value="1">
-                                <div class="input-group-btn">
-                                    <button class="btn btn-sm btn-primary btn-plus">
-                                        <i class="fa fa-plus"></i>
-                                    </button>
-                                </div>
-                            </div>
-                        </td>
-                        <td class="align-middle">$150</td>
-                        <td class="align-middle"><button class="btn btn-sm btn-primary"><i class="fa fa-times"></i></button></td>
-                    </tr>
-                    <tr>
-                        <td class="align-middle"><img src="img/product-5.jpg" alt="" style="width: 50px;"> Colorful Stylish Shirt</td>
+                        <td class="align-middle"><img src="../../../assets/images/product-5.jpg" alt="" style="width: 50px;"> Colorful Stylish Shirt</td>
+                        <td class="align-middle">Red</td>
+                        <td class="align-middle">XL</td>
                         <td class="align-middle">$150</td>
                         <td class="align-middle">
                             <div class="input-group quantity mx-auto" style="width: 100px;">
@@ -121,15 +133,7 @@
                 </tbody>
             </table>
         </div>
-        <div class="col-lg-4">
-            <form class="mb-5" action="">
-                <div class="input-group">
-                    <input type="text" class="form-control p-4" placeholder="Coupon Code">
-                    <div class="input-group-append">
-                        <button class="btn btn-primary">Apply Coupon</button>
-                    </div>
-                </div>
-            </form>
+        <div class="col-lg-3">
             <div class="card border-secondary mb-5">
                 <div class="card-header bg-secondary border-0">
                     <h4 class="font-weight-semi-bold m-0">Cart Summary</h4>
