--- a/ClientSide/src/app/app.component.html
+++ b/ClientSide/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="custom-scrollbar-container">
+<div>
 <app-top-bar></app-top-bar>
 <app-nav></app-nav>
 <!-- <app-header></app-header> -->
