--- a/ClientSide/src/app/components/shop/shop.component.html
+++ b/ClientSide/src/app/components/shop/shop.component.html
@@ -147,7 +147,8 @@
                       </div>
                   </div>
               </div>
-              <div class="col-lg-4 col-md-6 col-sm-12 pb-1" *ngFor="let product of products">
+              <div class="col-lg-4 col-md-6 col-sm-12 pb-1"
+              *ngFor="let product of products| paginate : { itemsPerPage: 6, currentPage: pagination, totalItems: allProducts }">
                   <div class="card product-item border-0 mb-4">
                       <div class="card-header product-img position-relative overflow-hidden bg-transparent border p-0">
                           <img class="img-fluid w-100" [src]="'../../../assets/images/product/' + product.image + '.jpg'" alt="{{ product.name}}">
@@ -164,28 +165,9 @@
                       </div>
                   </div>
               </div>
-
-
+              <!-- Start pagination -->
               <div class="col-12 pb-1">
-                  <nav aria-label="Page navigation">
-                    <ul class="pagination justify-content-center mb-3">
-                      <li class="page-item disabled">
-                        <a class="page-link" href="#" aria-label="Previous">
-                          <span aria-hidden="true">&laquo;</span>
-                          <span class="sr-only">Previous</span>
-                        </a>
-                      </li>
-                      <li class="page-item active"><a class="page-link" href="#">1</a></li>
-                      <li class="page-item"><a class="page-link" href="#">2</a></li>
-                      <li class="page-item"><a class="page-link" href="#">3</a></li>
-                      <li class="page-item">
-                        <a class="page-link" href="#" aria-label="Next">
-                          <span aria-hidden="true">&raquo;</span>
-                          <span class="sr-only">Next</span>
-                        </a>
-                      </li>
-                    </ul>
-                  </nav>
+                <pagination-controls (pageChange)="renderPage($event)"></pagination-controls>
               </div>
           </div>
       </div>
